--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="choose_playlist">Choose playlist</string>
     <string name="about">About</string>
     <string name="sprint_planning">Sprint Planning</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="week1">Week 1</string>
+    <string name="week2">Week 2</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
