--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,7 +120,7 @@
     <!-- Sprint Retrospective -->
     <string name="fri2_col3_row1">Sprint Retrospective</string>
     <string name="fri2_col3_row2">Dev-Team (SM facilitates ) , Product Owner</string>
-    <string name="fri2_col3_row3">Dev-Team (SM facilitates ) , Product Owne</string>
+    <string name="fri2_col3_row3">Dev-Team (SM facilitates ) , Product Owner</string>
     <string name="fri2_col3_row4">Sprint End</string>
     <string name="fri2_col3_row5">Max : 1.5 hours</string>
     <string name="fri2_col3_row6">Dev-team,Scrum Master,Product Owner</string>
