--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
 
     <string name="about">About</string>
     <string name="sprint">Sprint</string>
-    <string name="product_backlog">Product Backlog</string>
+    <string name="scrum_artifact">Scrum Artifacts</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
