--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,10 +131,14 @@
     <string name="about">About</string>
     <string name="sprint">Sprint</string>
     <string name="scrum_artifact">Scrum Artifacts</string>
+    <string name="role">Role</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="week1">Week 1</string>
     <string name="week2">Week 2</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="scrum_master">Scrum Master</string>
+    <string name="dev_team">Development Team</string>
+    <string name="product_owner">Product Owner</string>
 </resources>
